--- a/begin/templates/contact.html
+++ b/begin/templates/contact.html
@@ -61,7 +61,7 @@
 				<a href="https://www.instagram.com/askhatov_m/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 				<a href="https://www.facebook.com/mukhammed.askhatov/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 				<a href="https://www.linkedin.com/in/mukhammed-askhatov-a3bab3150/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-				<a href="https://twitter.com/askhatov"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				<a href="https://github.com/askhatov/Ask-blog"><i class="fa fa-github" aria-hidden="true"></i></a>
 			</div>
 	</form>
 
