--- a/begin/account/templates/account/profile.html
+++ b/begin/account/templates/account/profile.html
@@ -90,13 +90,13 @@
     </div>
     <div class="content">
         <h2>Mukhammed Askhatov</h2>
-        <p>Analytical Electronics Technologist, enthusiastic about developing, designing and troubleshooting the circuits. Bringing expertise in system setup, programming and repair. Ready to apply the knowledge to a new position.</p>
+        <p>My major is Electronics engineering technology but I also enjoy web development and design. This blog is about my experience and my work that I do in my freetime.</p>
         <a class="contact" href="/contact"><h3>Contact me</h3></a>
         <div class="social">
             <a href="https://www.instagram.com/askhatov_m/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://www.facebook.com/mukhammed.askhatov/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/mukhammed-askhatov-a3bab3150/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            <a href="https://twitter.com/askhatov"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://github.com/askhatov/Ask-blog"><i class="fa fa-github" aria-hidden="true"></i></a>
         </div>
     </div>
 </div>
